--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-LAQPBG1\\MSSQLSERVER02;Database=MVCTicariOtomasyonDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
